--- a/historie/før.html
+++ b/historie/før.html
@@ -5,6 +5,11 @@
     <title>Før</title>
 </head>
 <body>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae maxime provident rerum vero. Consectetur laborum non omnis soluta ullam vel voluptates! Asperiores aspernatur deleniti ducimus eum magni minima <qui class="lorem"></qui>
+    <header>
+        <
+    </header>
+    <main>
+
+    </main>
 </body>
 </html>
