--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <div id="container">
     <div class="hogm bob">
         <header>
-            <img src="Bilder/frontside.png">
+            <img src="Bilder/frontside.png" class="logo">
+            <img src="Bilder/banner.png" class="banner">
+
         </header>
         <main>
 
