Ferdig mangler tekst

--- a/hva_er_esport.html
+++ b/hva_er_esport.html
@@ -2,25 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hva er e-sport</title>
+    <title>E-sport</title>
     <link rel="stylesheet" href="esport_style.css">
 </head>
 <body>
 <div id="container">
     <div class="hogm bob">
         <header>
-            <img src="Bilder/Historie.png">
+            <img src="Bilder/frontside.png" class="logo">
+            <img src="Bilder/banner.png" class="banner">
 
-        <header>
+        </header>
         <main>
 
+            <p class="kol10">E-sport er videospill i form av konkurranse, all sportslig aktivitet som benytter datamaskiner gjelder som E-sport. De benytter også ofte datanettverk. E-sports involverer alltid mennesker men de kan også bestå av kun datamaskiner som direkte deltakere i spillet. E-sport konkurranser kan bli over internett eller i LAN-parties.</p>
+            <p>E-sport er mest produsert og populært i Asia. Men nå øker popularitet i resten av verden. De mest spilt genres er Real-time strategy, fighting, first-person-shooter og multiplayer online battle arena. De mest populære spillene er League of Legends, Dota 2, Hearthstone, Counter Strike: Global Offensive, Starcraft 2, og Overwatch. Og de mest populære konkurransene er «The international», «the league of legends World championship», «The evolution championship series» og «intel extreme masters»</p>
         </main>
     </div>
     <nav>
-        <div><img src="">Hva er e-sport</div>
-        <div>hei1</div>
-        <div>hei2</div>
-        <div>hei3</div>
+        <div><a href="hva_er_esport.html"><img src="Bilder/HvaErE-Sport.jpg">Hva er e-sport</a></div>
+        <div><a href=""><img src="Bilder/Historie.png.jpg">Historie</a></div>
+        <div><a href=""><img src="Bilder/Problemstilling.png">Problemstilling</a></div>
+        <div><a href=""><img src="Bilder/Oppsumering.jpg">Oppsumering</a></div>
     </nav>
 </div>
 </body>
