--- a/Historie.html
+++ b/Historie.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>E-sport</title>
+    <title>Historie</title>
     <link rel="stylesheet" href="esport_style.css">
 </head>
 <body>
