--- a/Historie.html
+++ b/Historie.html
@@ -15,8 +15,7 @@
         </header>
         <main>
 
-            <p class="kol10">I mange land har e-sport blitt etablert som en stor del av kulturen og samfunnet i forskjellige land. Som i f. eks Sør-Korea og Japan. I europeiske land som Norge er ikke e-sport like godt etablert, men dette later til å endre seg. Det er stadig flere turneringer som dukker opp, skoler tilbyr også stipend til elever for å bli med på skolelaget. </p>
-            <p>Som i 2015 var det en Altiboks liga hvor deltakere spilte spill som Heartstone, CSGO og League of Legends for å vinnepengepremier. </p>
+            <p class="kol10">I mange land har e-sport blitt etablert som en stor del av kulturen og samfunnet i forskjellige land. Som i f. eks Sør-Korea og Japan. I europeiske land som Norge er ikke e-sport like godt etablert, men dette later til å endre seg. <br> <br> Det er stadig flere turneringer som dukker opp, skoler tilbyr også stipend til elever for å bli med på skolelaget. Som i 2015 var det en Altiboks liga hvor deltakere spilte spill som Heartstone, CSGO og League of Legends for å vinnepengepremier. </p>
         </main>
     </div>
     <nav>
