Links images and a bit of colors

--- a/hva_er_esport.html
+++ b/hva_er_esport.html
@@ -9,7 +9,7 @@
 <div id="container">
     <div class="hogm bob">
         <header>
-            <img src="Bilder/frontside.png" class="logo">
+            <a href="index.html"><img src="Bilder/hva%20er%20det.png" class="logo"></a>
             <img src="Bilder/banner.png" class="banner">
 
         </header>
@@ -21,7 +21,7 @@
     </div>
     <nav>
         <div><a href="hva_er_esport.html"><img src="Bilder/HvaErE-Sport.jpg">Hva er e-sport</a></div>
-        <div><a href=""><img src="Bilder/Historie.png.jpg">Historie</a></div>
+        <div><a href="Historie.html"><img src="Bilder/Historie.png.jpg">Historie</a></div>
         <div><a href=""><img src="Bilder/Problemstilling.png">Problemstilling</a></div>
         <div><a href=""><img src="Bilder/Oppsumering.jpg">Oppsumering</a></div>
     </nav>
