--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <div id="container">
     <div class="hogm bob">
         <header>
-            <img src="Bilder/frontside.png" class="logo">
+            <a href="index.html"><img src="Bilder/frontside.png" class="logo"></a>
             <img src="Bilder/banner.png" class="banner">
 
         </header>
         <main>
 
-            <p class="kol10">I mange land har e-sport blitt etablert som en stor del av kulturen og samfunnet i forskjellige land. Som i f. eks Sør-Korea og Japan. I europeiske land som Norge er ikke e-sport like godt etablert, men dette later til å endre seg. Det er stadig flere turneringer som dukker opp, skoler tilbyr også stipend til elever for å bli med på skolelaget. </p>
-            <p>Som i 2015 var det en Altiboks liga hvor deltakere spilte spill som Heartstone, CSGO og League of Legends for å vinnepengepremier. </p>
+            <p class="kol10">I mange land har e-sport blitt etablert som en stor del av kulturen og samfunnet i forskjellige land. Som i f. eks Sør-Korea og Japan. I europeiske land som Norge er ikke e-sport like godt etablert, men dette later til å endre seg. Det er stadig flere turneringer som dukker opp, skoler tilbyr også stipend til elever for å bli med på skolelaget. <br> <br> Som i 2015 var det en Altiboks liga hvor deltakere spilte spill som Heartstone, CSGO og League of Legends for å vinnepengepremier. </p>
+
         </main>
     </div>
     <nav>
         <div><a href="hva_er_esport.html"><img src="Bilder/HvaErE-Sport.jpg">Hva er e-sport</a></div>
-        <div><a href=""><img src="Bilder/Historie.png.jpg">Historie</a></div>
+        <div><a href="Historie.html"><img src="Bilder/Historie.png.jpg">Historie</a></div>
         <div><a href=""><img src="Bilder/Problemstilling.png">Problemstilling</a></div>
         <div><a href=""><img src="Bilder/Oppsumering.jpg">Oppsumering</a></div>
     </nav>
