--- a/hva_er_esport.html
+++ b/hva_er_esport.html
@@ -17,6 +17,7 @@
             <div class="kol10">
             <h1>Hva er E-sport?</h1>
             <p>E-sport er videospill i form av konkurranse, all sportslig aktivitet som benytter datamaskiner gjelder som E-sport. De benytter også ofte datanettverk. E-sports involverer alltid mennesker men de kan også bestå av kun datamaskiner som direkte deltakere i spillet. E-sport konkurranser kan bli over internett eller i LAN-parties.<br> <br> E-sport er mest produsert og populært i Asia. Men nå øker popularitet i resten av verden. De mest spilt genres er Real-time strategy, fighting, first-person-shooter og multiplayer online battle arena. De mest populære spillene er League of Legends, Dota 2, Hearthstone, Counter Strike: Global Offensive, Starcraft 2, og Overwatch. Og de mest populære konkurransene er «The international», «the league of legends World championship», «The evolution championship series» og «intel extreme masters»</p>
+            <p class="kilder">Kilder:<br>https://www.toptal.com/finance/market-research-analysts/esports<br>https://no.wikipedia.org/wiki/E-Sport</p>
             </div>
         </main>
     </div>
