--- a/Problemstilling.html
+++ b/Problemstilling.html
@@ -14,8 +14,8 @@
 
         </header>
         <main>
-
-            <p class="kol10">Fans over hele verden er sønderknust etter at SKTT1 tapte Worlds (verdensmesterskapet i League of Legends). Faker storfavoritten gråter over tapet. Derimot Samsung Galaxy fansene jubler over at teamet deres endelig vinner etter 3 år. E-sport sprer seg rundt om i verden til mennesker på alle aldre. Det sprer seg rundt til forskjellige samfunnsgrupper. Denne teksten er om hvordan e-sport har endret sportskulturen i forskjellige samfunnsgrupper, og hva konsekvensene er.
+            <div class="kol10"><h1>Problemstilling</h1>
+            <p>Fans over hele verden er sønderknust etter at SKTT1 tapte Worlds (verdensmesterskapet i League of Legends). Faker storfavoritten gråter over tapet. Derimot Samsung Galaxy fansene jubler over at teamet deres endelig vinner etter 3 år. E-sport sprer seg rundt om i verden til mennesker på alle aldre. Det sprer seg rundt til forskjellige samfunnsgrupper. Denne teksten er om hvordan e-sport har endret sportskulturen i forskjellige samfunnsgrupper, og hva konsekvensene er.
                 <br><br>
                 Norge har ikke vert de fremste innenfor e-sport. Den første store turneringen som var i Norge var i 2014. Det er Telenorligaen og den inneholdt spillende: CSGO, League og Legends, Star Craft II, Dota 2 og Hearthstone: Heros of Warcraft. Selv om det er mange som spiller forskjellige spill som går under kategorien e-sport så er det ikke anerkjent som en sport her i Norge. Det er bare «begivenhet» som de voksene synes er interessant, bare noe vi yngre «driver med».
                 <br><br>
@@ -25,6 +25,7 @@
                 Disse punktene gjelder ikke bare for Korea, men i USA så er det ganske stort med E-sport. Her er det også et par store team som gjør det bra i turneringer. Men det som er mest vanlig for dem i USA blir jo en annen form for karriere innenfor E-sport. De tar og spiller de mest populære spillende over streaming (Tweetch) eller lager komedie videoer eller guid innenfor de største E-sport spillende og legger det ut på YouTube.
                 Men det er også en god del som er felles for disse E-sport entusiastene. Det er noe som er likt for alle sport fans. Hypen under cupfinalen. Hvordan entusiastene reiser seg av stolen når teamet deres vinner. Hvor likt det er når teamet deres taper. Selv om det er e-sport eller «vanlig sport» så vil det alltids være folk som misliker sporten og folk som elsker sporten.
             </p>
+            </div>
         </main>
     </div>
     <nav>
