--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="kol10">
                 <h1>E-sport</h1>
             <p>I mange land har e-sport blitt etablert som en stor del av kulturen og samfunnet i forskjellige land. Som i f. eks Sør-Korea og Japan. I europeiske land som Norge er ikke e-sport like godt etablert, men dette later til å endre seg. Det er stadig flere turneringer som dukker opp, skoler tilbyr også stipend til elever for å bli med på skolelaget. <br> <br> Som i 2015 var det en Altiboks liga hvor deltakere spilte spill som Heartstone, CSGO og League of Legends for å vinnepengepremier. </p>
+            <img src="Bilder/tw.png" width="300" height="90">
             </div>
         </main>
     </div>
