rest of logos and linkuboys
UNGGGGGGGGGG

--- a/diskusjon.html
+++ b/diskusjon.html
@@ -9,7 +9,7 @@
 <div id="container">
     <div class="hogm bob">
         <header>
-            <a href="index.html"><img src="Bilder/Historie.png" class="logo"></a>
+            <a href="index.html"><img src="Bilder/oppsumering.png" class="logo"></a>
             <img src="Bilder/banner.png" class="banner">
 
         </header>
