Joakim is Chinese

--- a/hva_er_esport.html
+++ b/hva_er_esport.html
@@ -17,7 +17,9 @@
             <div class="kol10">
             <h1>Hva er E-sport?</h1>
                 <p>E-sport er videospill i form av konkurranse, all sportslig aktivitet som benytter datamaskiner gjelder som E-sport. De benytter også ofte datanettverk. E-sports involverer alltid mennesker men de kan også bestå av kun datamaskiner som direkte deltakere i spillet. E-sport konkurranser kan bli over internett eller i LAN-parties.<br> <br> E-sport er mest produsert og populært i Asia. Men nå øker popularitet i resten av verden. De mest spilt genres er Real-time strategy, fighting, first-person-shooter og multiplayer online battle arena. De mest populære spillene er <a class="linkuboy" href= "https://euw.leagueoflegends.com/en/game-info/get-started/what-is-lol/"> League of Legends</a>, <a class="linkuboy" href= "http://ru.dota2.com/">Dota 2</a>, <a class="linkuboy" href= "https://playhearthstone.com/en-us/">Hearthstone</a>, <a class="linkuboy" href= "http://store.steampowered.com/app/730/CounterStrike_Global_Offensive/">Counter Strike: Global Offensive</a>,  <a class="linkuboy" href= "https://starcraft2.com/en-us/">Starcraft 2</a>, og  <a class="linkuboy" href= "https://playoverwatch.com/es-es/">Overwatch</a>. Og de mest populære konkurransene er «The international», «the league of legends World championship», «The evolution championship series» og «intel extreme masters»</p>
-            <p class="kilder">Kilder:<br>https://www.toptal.com/finance/market-research-analysts/esports<br>https://no.wikipedia.org/wiki/E-Sport</p>
+                <img class="seb" src="Bilder/sebby.png" width="560" height="300">
+                <p class="kilder">Kilder:<br>https://www.toptal.com/finance/market-research-analysts/esports<br>https://no.wikipedia.org/wiki/E-Sport</p>
+
             </div>
         </main>
     </div>
