--- a/Problemstilling.html
+++ b/Problemstilling.html
@@ -15,12 +15,16 @@
         </header>
         <main>
             <div class="kol10"><h1>Problemstilling</h1>
-            <p>Fans over hele verden er sønderknust etter at SKTT1 tapte Worlds (verdensmesterskapet i League of Legends). Faker storfavoritten gråter over tapet. Derimot Samsung Galaxy fansene jubler over at teamet deres endelig vinner etter 3 år. E-sport sprer seg rundt om i verden til mennesker på alle aldre. Det sprer seg rundt til forskjellige samfunnsgrupper. Denne teksten er om hvordan e-sport har endret sportskulturen i forskjellige samfunnsgrupper, og hva konsekvensene er.
+            <p>Fans over hele verden er sønderknust etter at SKTT1 (SK telecom team 1) tapte Worlds (verdensmesterskapet i League of Legends). Faker storfavoritten gråter over tapet. Derimot Samsung Galaxy fansene jubler over at teamet deres endelig vinner etter 3 år. E-sport sprer seg rundt om i verden til mennesker på alle aldre. Det sprer seg rundt til forskjellige samfunnsgrupper. Denne teksten er om hvordan e-sport har endret sportskulturen i forskjellige samfunnsgrupper, og hva konsekvensene er.
+                <br><br>
+                <img src="Bilder/skt.jpg" width="600" height="330">
                 <br><br>
                 Norge har ikke vert de fremste innenfor e-sport. Den første store turneringen som var i Norge var i 2014. Det er Telenorligaen og den inneholdt spillende: CSGO, League og Legends, Star Craft II, Dota 2 og Hearthstone: Heros of Warcraft. Selv om det er mange som spiller forskjellige spill som går under kategorien e-sport så er det ikke anerkjent som en sport her i Norge. Det er bare «begivenhet» som de voksene synes er interessant, bare noe vi yngre «driver med».
                 <br><br>
                 Sør-Korea derimot er store fans av e-sport. Det var jo tross alt en sørkoreaner som ville gjøre e-sport til en offisiell sport. Dette har betydd mye for ideen for å få e-sport til en «ekte sport».
                 E-sport fenomenet har hatt stor innflytelse i Sør-Korea. Det er satt opp spillkafeer du kan dra til for å spille og ta en drikke. Det er mange store team man kan prøve å bli med i for å tjene penger og bli berømt, og bare noen få har klart det. Mange bruker også spillet som en unnskyldning for å unngå stress og aktivitet. Det er store turneringer i Korea med kraftige pengepriser. Dette får jo spill interesserte til å ta mer tid for å bli profesjonell spillere slik at de kan leve på det de elsker.
+                <br><br>
+                <img src="Bilder/lol.png" width="350" height="130">
                 <br><br>
                 Disse punktene gjelder ikke bare for Korea, men i USA så er det ganske stort med E-sport. Her er det også et par store team som gjør det bra i turneringer. Men det som er mest vanlig for dem i USA blir jo en annen form for karriere innenfor E-sport. De tar og spiller de mest populære spillende over streaming (Tweetch) eller lager komedie videoer eller guid innenfor de største E-sport spillende og legger det ut på YouTube.
                 Men det er også en god del som er felles for disse E-sport entusiastene. Det er noe som er likt for alle sport fans. Hypen under cupfinalen. Hvordan entusiastene reiser seg av stolen når teamet deres vinner. Hvor likt det er når teamet deres taper. Selv om det er e-sport eller «vanlig sport» så vil det alltids være folk som misliker sporten og folk som elsker sporten.
