--- a/diskusjon.html
+++ b/diskusjon.html
@@ -14,11 +14,13 @@
 
         </header>
         <main>
-
-            <p class="kol10">Som vi har forklart har e-sport raskt etablert seg som en stor del av mange ungdommers liv. Flere store selskaper har også tatt interesse i denne trenden og har dermed styrket veksten enda mer. Ved å blant annet gjøre fortjenesten til spillere større og showene på turneringer mer spektakulære noe som lokker inn flere.</p>
-                <p class="kol10"> I Asia tilber barn gamere på lik linje som man ellers ville tilbedt atleter. Noe som ikke er veldig utenkelig at vil skje også her i Europa. Mange voksne er fortsatt kritisk til e-sport, men det er fortsatt en del voksene som synes dette er gøy og spennende. På lik linje som det ungdom og unge voksene gjør.</p>
-            <p class="kol10">Vi ser en stor endring i hvordan både oppfattingen av e-sport og selve spillsamfunnet har endret seg de siste årene. Før tenkte mange at gamere var tjukke menn som satt i kjelleren og bare spilte videospill. Men e-sport har vist befolkningen akkurat hvor stort spillsamfunnet er. Ved å få gamere ut av husene og samlet dem på arrangementer. Dette har blant annet vist at gamere er som de fleste andre, de er helt vanlige personer med spilling som hobby. </p>
-            <p class="kol10">Vi vil konkludere med å si at e-sport har hatt en styrkende effekt på spillsamfunnet og gjort at det er blitt mer akseptert rundt omkring i verden.</p>
+            <div class="kol10">
+                <h1>Oppsumering</h1>
+                    <p>Som vi har forklart har e-sport raskt etablert seg som en stor del av mange ungdommers liv. Flere store selskaper har også tatt interesse i denne trenden og har dermed styrket veksten enda mer. Ved å blant annet gjøre fortjenesten til spillere større og showene på turneringer mer spektakulære noe som lokker inn flere.</p>
+                    <p> I Asia tilber barn gamere på lik linje som man ellers ville tilbedt atleter. Noe som ikke er veldig utenkelig at vil skje også her i Europa. Mange voksne er fortsatt kritisk til e-sport, men det er fortsatt en del voksene som synes dette er gøy og spennende. På lik linje som det ungdom og unge voksene gjør.</p>
+                    <p>Vi ser en stor endring i hvordan både oppfattingen av e-sport og selve spillsamfunnet har endret seg de siste årene. Før tenkte mange at gamere var tjukke menn som satt i kjelleren og bare spilte videospill. Men e-sport har vist befolkningen akkurat hvor stort spillsamfunnet er. Ved å få gamere ut av husene og samlet dem på arrangementer. Dette har blant annet vist at gamere er som de fleste andre, de er helt vanlige personer med spilling som hobby. </p>
+                    <p>Vi vil konkludere med å si at e-sport har hatt en styrkende effekt på spillsamfunnet og gjort at det er blitt mer akseptert rundt omkring i verden.</p>
+                </div>
         </main>
     </div>
     <nav>
