--- a/diskusjon.html
+++ b/diskusjon.html
@@ -20,7 +20,7 @@
                     <p> I Asia tilber barn <a class="linkuboy" href="https://www.cheatsheet.com/technology/8-of-the-best-pro-gamers-in-the-world.html/?a=viewall">gamere</a> på lik linje som man ellers ville tilbedt atleter. Noe som ikke er veldig utenkelig at kan skje også her i Europa. Mange voksne er fortsatt kritisk til e-sport, men det er fortsatt en del voksene som synes dette er gøy og spennende. På lik linje som det ungdom og unge voksene gjør.</p>
                     <p>Vi ser en stor endring i hvordan både oppfattingen av e-sport og selve spillsamfunnet har endret seg de siste årene. Før tenkte mange at gamere var tjukke menn som satt i kjelleren og bare spilte videospill. Men e-sport har vist befolkningen akkurat hvor stort spillsamfunnet er. Ved å få gamere ut av husene og samlet dem på arrangementer. Dette har blant annet vist at gamere er som de fleste andre, de er helt vanlige personer med spilling som hobby. </p>
                     <p>Vi vil konkludere med å si at e-sport har hatt en styrkende effekt på spillsamfunnet og gjort at det er blitt mer akseptert rundt omkring i verden.</p>
-            <img src="Bilder/Overwatch.png" width="730px" height="400">
+            <img src="Bilder/Overwatch.png" width="70%">
             </div>
         </main>
     </div>
